# ComfyUI-KwaiKolorsWrapper

./: README.md  nodes.py  pyproject.toml  requirements.txt
examples/: kolors_example.json  kolors_img2img_example.json
kolors/models/: tokenization_chatglm.py
kolors/pipelines/: pipeline_stable_diffusion_xl_chatglm_256.py
